# opencv_practice

Arithmetic/: Arithmetic.cpp  CMakeLists.txt
Bilateral/: Bilateral.cpp  CMakeLists.txt
Blurring/: Blurring.cpp  CMakeLists.txt
Brightness/: Brightness.cpp  CMakeLists.txt
CamRecord/: CMakeCache.txt  CMakeLists.txt  CamRecord  CamRecord.cpp  Makefile  cmake_install.cmake  output.avi
Contrast/: CMakeLists.txt  Contrast.cpp
Drawing/: CMakeCache.txt  CMakeLists.txt  Drawing  Drawing.cpp  Makefile  cmake_install.cmake
Equalize/: CMakeLists.txt  Equalize.cpp
Filter/: CMakeLists.txt  Filter.cpp
Gaussian/: CMakeLists.txt  Gaussian.cpp
HelloCV/: CMakeCache.txt  CMakeLists.txt  HelloCV  HelloCV.cpp  Makefile  cmake_install.cmake
Histogram1/: CMakeLists.txt  Histogram1.cpp
Histogram2/: CMakeLists.txt  Histogram2.cpp  Makefile
Logical/: CMakeLists.txt  Logical.cpp
MaskOp/: CMakeCache.txt  CMakeLists.txt  Makefile  MaskOp  MaskOp.cpp  cmake_install.cmake
MouseEvent/: CMakeCache.txt  CMakeLists.txt  Makefile  MouseEvent  MouseEvent.cpp  cmake_install.cmake
Profile/: CMakeLists.txt  Profile.cpp
Sharpen/: CMakeLists.txt  Sharpen.cpp
Stretching/: CMakeLists.txt  Stretching.cpp
TrackBar/: CMakeCache.txt  CMakeLists.txt  Makefile  TrackBar  TrackBar.cpp  cmake_install.cmake
VidoeCap/: CMakeCache.txt  CMakeLists.txt  Makefile  VideoCap  VideoCap.cpp  cmake_install.cmake
adjmean/: CMakeLists.txt  adjmean.cpp
cppTest/: cppTest  cppTest.cpp
imageOpencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imageOpencv  image_open.cpp
(+6 files in other folders)
